--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,12 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+<!--
+  Generated template for the HomePage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
+
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <h1 text-center>Art</h1>
+  <button ion-button icon-only clear (click)="audioPlayer('sample')"><ion-icon name="ios-play-outline"></ion-icon></button>
 </ion-content>
