added icons and button styling

--- a/app/src/pages/home/home.html
+++ b/app/src/pages/home/home.html
@@ -26,7 +26,7 @@
     </ol>
   </section>
   <section class="actions" text-center>
-    <button ion-button (click)="start()">Naar stap 1</button>
+    <art-button-rectangle (click)="start()" [text]="'Naar stap 1'"></art-button-rectangle>
   </section>
   <!-- <button ion-button icon-only clear (click)="audioPlayer('sample')"><ion-icon name="ios-play-outline"></ion-icon></button> -->
 </ion-content>
