--- a/app/src/pages/confirm/confirm.html
+++ b/app/src/pages/confirm/confirm.html
@@ -4,22 +4,14 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>Top!</ion-title>
-  </ion-navbar>
-
-</ion-header>
 
 
 <ion-content padding>
-  <p>
+  <h1 text-center>
     Je koos voor de {{interest}} {{learningTopic}} tour.
-  </p>
+  </h1>
   <section class="actions" text-center>
-      <button ion-button (click)="startTour()">Start</button>
-      <br>of<br>
-      <button ion-button (click)="restart()">Kies opnieuw</button>
+      <art-button-rectangle [text]="'Terug'" (click)="navCtrl.pop()" class="back"></art-button-rectangle>
+      <art-button-rectangle [text]="'Start'" (click)="startTour()"></art-button-rectangle>
   </section>
 </ion-content>
