--- a/app/src/pages/select-interest/select-interest.html
+++ b/app/src/pages/select-interest/select-interest.html
@@ -19,6 +19,6 @@
   </ion-grid>
   <section class="actions" text-center>
       <art-button-rectangle [text]="'Terug'" (click)="navCtrl.pop()" class="back"></art-button-rectangle>
-      <art-button-rectangle [text]="'Verder'" (click)="goToLearningTopics()" [class.disabled]="!currentInterest"></art-button-rectangle>
+      <art-button-rectangle [text]="'Verder'" (click)="goToLearningTopics()" [class.disabled]="!currentInterest"  class="next"></art-button-rectangle>
   </section>
 </ion-content>
