--- a/app/src/modals/audio/audio.html
+++ b/app/src/modals/audio/audio.html
@@ -11,7 +11,7 @@
     <div style="display: flex" class="controls">
       <art-button-round [icon]="'play'" (click)="audioTrack.canPlay ? audioTrack.play() : next()" class="small transparent"></art-button-round>
       <art-button-round [icon]="'pause'" (click)="audioTrack.pause()" class="small transparent"></art-button-round>
-      <!-- <button ion-button icon-only clear (click)="next()"><ion-icon name="ios-skip-forward-outline" color="danger"></ion-icon></button> -->
+      <!-- <button tappable ion-button icon-only clear (click)="next()"><ion-icon name="ios-skip-forward-outline" color="danger"></ion-icon></button> -->
       <audio-track-progress-bar duration progress [audioTrack]="audioTrack" style="width: 100%; margin: 0 10px"></audio-track-progress-bar>
     </div>
     <div  class="info" >
