--- a/app/src/pages/thanks/thanks.html
+++ b/app/src/pages/thanks/thanks.html
@@ -6,29 +6,37 @@
 -->
 
 
-<ion-content padding text-center>
-  <h1>
-    Dankjewel! 
-  </h1>
-  <p>
-    Bedankt voor het doen van de tour. Je kunt nu in de volgende ruimte alles even laten bezinken, en gezellig met andere bezoekers je ervaringen delen!
+<ion-content padding>
+  <p text-left>
+      De tour is afgelopen. Wij hopen dat je een rijke ervaring hebt gehad.
+      <br><br>
+      Doe nog een tour of eindig je bezoek in de “witte ruimte”. 
+      <br>
+      Hier kun je alles even op je laten inwerken, het bespreken met anderen en lekker uitrusten.
+      <br>
+      Laat ook je mening voor ons achter door deze op de muur te tekenen of te schrijven!
   </p>
 
-  <form margin-bottom *ngIf="!error && !success" class="contactForm">
-    <ion-item>
-      <ion-label>Naam</ion-label>
-      <ion-input type="text" [(ngModel)]="contactInfo.name" name="name"></ion-input>
-    </ion-item>
-    <ion-item no-lines>
-      <ion-label>Email</ion-label>
-      <ion-input [(ngModel)]="contactInfo.email" name="email" email></ion-input>
-    </ion-item>
+  <form margin-bottom *ngIf="!error && !success" class="contactForm" text-left>
+    <p margin-bottom>Wil je op de hoogte blijven van de ontwikkelingen rondom ART | SEE vul dan hieronder je mailadres in!</p>
+    <ion-row>
+        <ion-col col-6>
+          <ion-item>
+            <ion-input type="text" [(ngModel)]="contactInfo.name" name="name" placeholder="Naam"></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col col-6>
+          <ion-item class="padding-left-2px">
+            <ion-input [(ngModel)]="contactInfo.email" name="email" email placeholder="E-mail"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
     <art-button-rectangle tappable [text]="'Verstuur'" (click)="sendContactInfo()"></art-button-rectangle>
   </form>
 
   <p *ngIf="error">{{this.error}}</p>
   <p *ngIf="success">Bedankt voor het versturen van je gegevens!</p>
 
-  <art-button-rectangle margin-top [text]="'Begin opnieuw'" (click)="goToStart()"></art-button-rectangle>
+  <art-button-rectangle margin-top [text]="'Begin opnieuw'" (click)="goToStart()" class="next"></art-button-rectangle>
 
 </ion-content>
