--- a/app/src/modals/audio/audio.html
+++ b/app/src/modals/audio/audio.html
@@ -7,9 +7,9 @@
 
 
 <ion-content padding>
-  <audio-track #audioTrack [track]="currentTrack" [autoplay]="true" (onFinish)="onTrackFinished($event)">
+  <audio-track #audioTrack [track]="currentTrack" [autoplay]="true">
     <div style="display: flex" class="controls">
-      <art-button-round [icon]="'play'" (click)="audioTrack.canPlay ? audioTrack.play() : next()" class="small transparent"></art-button-round>
+      <art-button-round [icon]="'play'" (click)="audioTrack.canPlay ? audioTrack.play() : ''" class="small transparent"></art-button-round>
       <art-button-round [icon]="'pause'" (click)="audioTrack.pause()" class="small transparent"></art-button-round>
       <!-- <button tappable ion-button icon-only clear (click)="next()"><ion-icon name="ios-skip-forward-outline" color="danger"></ion-icon></button> -->
       <audio-track-progress-bar duration progress [audioTrack]="audioTrack" style="width: 100%; margin: 0 10px"></audio-track-progress-bar>
